# ha-cascade-climate

./: .gitignore  CONTRIBUTING.md  README.md  hacs.json  justfile  pyproject.toml  quality_scale.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
custom_components/cascade_climate/: __init__.py  climate.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/cascade_climate/translations/: en.json
tests/: __init__.py  conftest.py  test_climate.py  test_config_flow.py  test_init.py  test_sensor.py
